# autorust_openapi

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
examples/: ignored.rs  prettyprint.rs  printer.rs
src/: autorest.rs  contact.rs  error.rs  info.rs  lib.rs  license.rs  openapi.rs  operation.rs  parameter.rs  paths.rs  reference.rs  schema.rs  security.rs  tag.rs  util.rs
src/v2/: mod.rs  schema.rs
src/v3_0/: components.rs  mod.rs  schema.rs
tests/: azure_rest_api_specs.rs  openapi_spec_examples.rs
tests/common/: mod.rs
