[package]
name = "autorust_openapi"
version = "0.2.0"
authors = ["Cameron Taggart <cameron.taggart@gmail.com>", "softprops <d.tangren@gmail.com>"]
description = "Rust bindings for openapi schemas as needed by autorust"
documentation = "https://docs.rs/autorust_openapi"
homepage = "https://github.com/ctaggart/autorust_openapi"
repository = "https://github.com/ctaggart/autorust_openapi"
keywords = ["openapi", "swagger", "AutoRest", "autorust"]
license = "MIT"
edition = "2018"

[dependencies]
error-chain = "*"
failure = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
url = { version = "*", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "*"
